@@ -1,3 +1,9 @@
+2010-04-06  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/43642
+	* lex.c (lex_raw_string): Change type of TYPE variable to
+	unsigned char.
+
 2010-03-29  Jason Merrill  <jason@redhat.com>
 
 	More N3077 raw string changes
